Fix tabs list bug - visible focus displayed when clicking out side and then clicking on one tab (#537)
* start

* fix icon button ad dropdown

* fix stories

* fix stories

* fix icon button and drop down stories

* drop down fixes

* fix snapshot tests

* wip

* fix focus issue on tabs list

* fix focus issue on tabs list - with disabled tabs

* fix focus issue on tabs list - with disabled tabs

* fix focus issue on tabs list - with disabled tabs

* fix focus issue on tabs list - with disabled tabs

* fix bug: first tab will focus on first item in the list

* fix

* fix

* fix

* fix tests

* fix click create focus issue

* fix bug - display focus when blur by keyboard and then focus again by keyboard

* add comments

* fix tests

* fix import

* fix tests

* fix tests

* last fix

* last fix

--- a/src/components/Tabs/Tab/Tab.scss
+++ b/src/components/Tabs/Tab/Tab.scss
@@ -57,7 +57,7 @@
   }
 
   &.tab-focus-visible-inset {
-    @include focus-style-inset(3px, 3px);
+    @include focus-style-css-inset(3px, 3px);
     position: relative;
   }
 
